--- a/IPSX/Storyboard/Base.lproj/Main.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="97x-rt-BAG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="97x-rt-BAG">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -980,7 +980,7 @@
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g3F-oO-1zn">
                                                     <rect key="frame" x="0.0" y="0.0" width="345" height="67"/>
                                                     <connections>
-                                                        <segue destination="sXt-2s-6Qg" kind="show" id="x1N-Wf-OOW"/>
+                                                        <segue destination="sXt-2s-6Qg" kind="show" identifier="enrollTestingSegueID" id="x1N-Wf-OOW"/>
                                                     </connections>
                                                 </button>
                                             </subviews>
@@ -1021,7 +1021,7 @@
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O28-sY-gTv">
                                                     <rect key="frame" x="0.0" y="0.0" width="345" height="67"/>
                                                     <connections>
-                                                        <segue destination="t5L-Xq-3ez" kind="show" id="IUE-nb-IH3"/>
+                                                        <segue destination="t5L-Xq-3ez" kind="show" identifier="enrollStakingSegueID" id="IUE-nb-IH3"/>
                                                     </connections>
                                                 </button>
                                             </subviews>
@@ -1237,7 +1237,7 @@
         <image name="Wallet" width="26" height="26"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="TtS-cb-UUJ"/>
+        <segue reference="Kc9-Od-4gN"/>
         <segue reference="eg6-mz-aaC"/>
     </inferredMetricsTieBreakers>
 </document>
