--- a/IPSX/Flows/EnrolStaking/Storyboard/Base.lproj/EnrolStaking.storyboard
+++ b/IPSX/Flows/EnrolStaking/Storyboard/Base.lproj/EnrolStaking.storyboard
@@ -380,7 +380,7 @@
         <!--Enrol Stake Summary Controller-->
         <scene sceneID="vHl-2w-NlH">
             <objects>
-                <viewController id="hRf-V5-KyD" customClass="EnrolStakeSummaryController" customModule="IPSX" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="EnrolStakeSummaryControllerID" id="hRf-V5-KyD" customClass="EnrolStakeSummaryController" customModule="IPSX" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="UPM-yM-iBF">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -569,6 +569,9 @@
                                 <state key="normal" title="Edit">
                                     <color key="titleColor" red="0.16862745100000001" green="0.51372549020000002" blue="0.65499997139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <segue destination="ed8-iD-6e1" kind="show" identifier="editStakingsSegueID" id="6Wn-Rd-q24"/>
+                                </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NhE-Qu-Wmm" customClass="CustomLoadingView" customModule="IPSX" customModuleProvider="target">
                                 <rect key="frame" x="165.5" y="321.5" width="44" height="44"/>
@@ -615,10 +618,15 @@
                     </view>
                     <navigationItem key="navigationItem" id="ZPo-BT-L4y"/>
                     <connections>
+                        <outlet property="editButton" destination="oXX-WC-jci" id="IKd-Zk-G3y"/>
+                        <outlet property="enrolmentDateLabel" destination="Xe9-rP-jWo" id="dLs-bx-Vbj"/>
+                        <outlet property="enrolmentTimeLabel" destination="RQd-TM-HU5" id="Xpv-wl-tZh"/>
                         <outlet property="loadingView" destination="NhE-Qu-Wmm" id="vgu-US-Mqn"/>
                         <outlet property="separatorView" destination="Yu3-Xe-ZPv" id="IEJ-IN-J7Y"/>
                         <outlet property="topBarView" destination="qmo-WD-GgI" id="CLA-2G-lhn"/>
                         <outlet property="topConstraintOutlet" destination="0gb-cF-2Ms" id="AlC-ir-Kid"/>
+                        <outlet property="walletAddressLabel" destination="zbO-ZD-ubO" id="V9G-d6-NLC"/>
+                        <outlet property="walletAlliasLabel" destination="kVe-CY-NTE" id="Joo-3U-9k0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7iB-Zc-QQ1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -636,4 +644,7 @@
         <image name="checkbox" width="21" height="21"/>
         <image name="stakingLogo" width="62" height="62"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="6Wn-Rd-q24"/>
+    </inferredMetricsTieBreakers>
 </document>
