--- a/IPSX/Storyboard/Base.lproj/Main.storyboard
+++ b/IPSX/Storyboard/Base.lproj/Main.storyboard
@@ -780,8 +780,9 @@
         <!--Navigation Controller-->
         <scene sceneID="jmj-Iy-rg5">
             <objects>
-                <navigationController navigationBarHidden="YES" toolbarHidden="NO" id="NuM-8C-s9N" sceneMemberID="viewController">
+                <navigationController navigationBarHidden="YES" id="NuM-8C-s9N" sceneMemberID="viewController">
                     <nil key="simulatedTopBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="zta-ir-g4O">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
