--- a/IPSX/Flows/Register/Storyboard/Base.lproj/Register.storyboard
+++ b/IPSX/Flows/Register/Storyboard/Base.lproj/Register.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="4LK-o1-btc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="4LK-o1-btc">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -673,6 +673,13 @@
                                     <segue destination="1Cf-U5-hpW" kind="show" id="R9h-qU-OTt"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="22K-AQ-Usn" userLabel="Separator">
+                                <rect key="frame" x="0.0" y="64" width="375" height="0.5"/>
+                                <color key="backgroundColor" red="0.67450980390000004" green="0.67450980390000004" blue="0.67450980390000004" alpha="0.29737015845070425" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="0.5" id="62b-Uf-uIq"/>
+                                </constraints>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mZj-xu-9D4" userLabel="Top Bar">
                                 <rect key="frame" x="0.0" y="-30" width="375" height="94"/>
                                 <subviews>
@@ -680,13 +687,6 @@
                                         <rect key="frame" x="135" y="62" width="105" height="21"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
                                     </imageView>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="22K-AQ-Usn" userLabel="Separator">
-                                        <rect key="frame" x="0.0" y="93" width="375" height="1"/>
-                                        <color key="backgroundColor" red="0.67450980390000004" green="0.67450980390000004" blue="0.67450980390000004" alpha="1" colorSpace="calibratedRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="0.5" id="3us-s1-b06"/>
-                                        </constraints>
-                                    </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="626-p6-04Z">
                                         <rect key="frame" x="8" y="50" width="44" height="44"/>
                                         <constraints>
@@ -704,11 +704,8 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="94" id="99A-EN-vhh"/>
-                                    <constraint firstItem="22K-AQ-Usn" firstAttribute="leading" secondItem="mZj-xu-9D4" secondAttribute="leading" id="OJO-yI-nbW"/>
                                     <constraint firstItem="626-p6-04Z" firstAttribute="leading" secondItem="mZj-xu-9D4" secondAttribute="leading" constant="8" id="Y5a-zM-FRI"/>
-                                    <constraint firstAttribute="bottom" secondItem="22K-AQ-Usn" secondAttribute="bottom" id="dK6-gF-6yK"/>
                                     <constraint firstAttribute="bottom" secondItem="626-p6-04Z" secondAttribute="bottom" id="qQS-99-Gps"/>
-                                    <constraint firstAttribute="trailing" secondItem="22K-AQ-Usn" secondAttribute="trailing" id="qTw-Si-oO3"/>
                                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="626-p6-04Z" secondAttribute="trailing" constant="20" symbolic="YES" id="wwU-vp-Jfs"/>
                                 </constraints>
                             </view>
@@ -727,6 +724,14 @@
                                 <color key="textColor" red="0.0" green="0.16470588235294117" blue="0.16470588235294117" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wtI-XS-2PJ" customClass="CustomLoadingView" customModule="IPSX" customModuleProvider="target">
+                                <rect key="frame" x="165.5" y="321.5" width="44" height="44"/>
+                                <color key="backgroundColor" red="0.81176470590000005" green="0.054901960780000002" blue="0.054901960780000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="44" id="73A-N1-BrV"/>
+                                    <constraint firstAttribute="height" constant="44" id="7HN-WI-SwJ"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -734,15 +739,20 @@
                             <constraint firstItem="yN7-LQ-cC1" firstAttribute="height" secondItem="rbU-NO-i18" secondAttribute="height" id="5xk-Jm-Ony"/>
                             <constraint firstItem="yN7-LQ-cC1" firstAttribute="width" secondItem="rbU-NO-i18" secondAttribute="width" id="8pR-IW-TKq"/>
                             <constraint firstItem="WcS-Hq-YXV" firstAttribute="top" secondItem="fgG-du-es1" secondAttribute="bottom" constant="20" id="9Ox-VK-qaY"/>
+                            <constraint firstItem="wtI-XS-2PJ" firstAttribute="centerX" secondItem="upd-gp-bcO" secondAttribute="centerX" id="AOa-ep-UfL"/>
                             <constraint firstItem="upd-gp-bcO" firstAttribute="top" secondItem="74b-ZJ-UEf" secondAttribute="top" constant="20" id="F3s-oq-Rsz"/>
+                            <constraint firstItem="wtI-XS-2PJ" firstAttribute="centerY" secondItem="upd-gp-bcO" secondAttribute="centerY" id="FyN-nu-xOG"/>
+                            <constraint firstItem="upd-gp-bcO" firstAttribute="trailing" secondItem="22K-AQ-Usn" secondAttribute="trailing" id="G1d-EJ-e1s"/>
                             <constraint firstItem="upd-gp-bcO" firstAttribute="top" secondItem="mZj-xu-9D4" secondAttribute="top" constant="50" id="PyW-nj-azr"/>
+                            <constraint firstItem="22K-AQ-Usn" firstAttribute="top" secondItem="mZj-xu-9D4" secondAttribute="bottom" id="Qbs-Hq-uUo"/>
                             <constraint firstItem="74b-ZJ-UEf" firstAttribute="leading" secondItem="upd-gp-bcO" secondAttribute="leading" id="Thu-I9-5LT"/>
                             <constraint firstItem="upd-gp-bcO" firstAttribute="bottom" secondItem="74b-ZJ-UEf" secondAttribute="bottom" id="Tlt-zQ-jxt"/>
                             <constraint firstItem="rbU-NO-i18" firstAttribute="top" secondItem="yN7-LQ-cC1" secondAttribute="bottom" constant="15" id="UxF-mU-aXZ"/>
-                            <constraint firstItem="fgG-du-es1" firstAttribute="top" secondItem="mZj-xu-9D4" secondAttribute="bottom" constant="24" id="YUt-ED-GLj"/>
+                            <constraint firstItem="fgG-du-es1" firstAttribute="top" secondItem="22K-AQ-Usn" secondAttribute="bottom" constant="23.5" id="Y28-cT-ZaB"/>
                             <constraint firstItem="WcS-Hq-YXV" firstAttribute="leading" secondItem="yN7-LQ-cC1" secondAttribute="leading" id="cS2-BZ-oTl"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="fgG-du-es1" secondAttribute="trailing" constant="20" symbolic="YES" id="etP-Vg-J4d"/>
                             <constraint firstItem="upd-gp-bcO" firstAttribute="bottom" secondItem="rbU-NO-i18" secondAttribute="bottom" constant="37" id="hCz-aE-zZK"/>
+                            <constraint firstItem="22K-AQ-Usn" firstAttribute="leading" secondItem="upd-gp-bcO" secondAttribute="leading" id="hfO-rn-YWI"/>
                             <constraint firstItem="upd-gp-bcO" firstAttribute="trailing" secondItem="74b-ZJ-UEf" secondAttribute="trailing" id="k8n-fb-NK3"/>
                             <constraint firstItem="yN7-LQ-cC1" firstAttribute="centerX" secondItem="rbU-NO-i18" secondAttribute="centerX" id="kxn-wd-kFV"/>
                             <constraint firstItem="fgG-du-es1" firstAttribute="leading" secondItem="WcS-Hq-YXV" secondAttribute="leading" id="mME-qu-BJ2"/>
@@ -755,6 +765,10 @@
                     <navigationItem key="navigationItem" id="G27-0A-fiU"/>
                     <connections>
                         <outlet property="backgroundImageView" destination="74b-ZJ-UEf" id="Hlr-W9-5rA"/>
+                        <outlet property="loadingView" destination="wtI-XS-2PJ" id="n7Y-Gd-CnU"/>
+                        <outlet property="separatorView" destination="22K-AQ-Usn" id="X1V-xd-8ft"/>
+                        <outlet property="topBarView" destination="mZj-xu-9D4" id="thO-AT-HA2"/>
+                        <outlet property="topConstraintOutlet" destination="Qbs-Hq-uUo" id="bno-wF-aKn"/>
                         <segue destination="NZC-Rz-rhn" kind="show" identifier="showRegistrationTermsSegueID" id="1vA-HG-zbM"/>
                     </connections>
                 </viewController>
